--- a/app/index.html
+++ b/app/index.html
@@ -11,11 +11,15 @@
         <ul class="nav navbar-nav">
           <li>
             <a>bootstrap_test</a>
+            <a> {{ 2+2 }} </a>
+            <a ui-sref="log">Log</a>
           </li>
         </ul>
       </div>
     </nav>
-    
+        <div class="container">
+        <ui-view></ui-view>
+    </div>
     <script type="text/javascript" src="bundle.js"></script>    
 </body>
 
