dodawanie taskow do Firebase

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li>
-            <a>bootstrap_test</a>
             <a> {{ 2+2 }} </a>
-            <a ui-sref="log">Log</a>
-          </li>
+            <h3 class="panel-heading">Login</h3>
+              <a ui-sref="log"></a>
         </ul>
       </div>
     </nav>
