--- a/app/logowanie/log.html
+++ b/app/logowanie/log.html
@@ -29,20 +29,23 @@
         
   <h3>Show me</h3>    
   <label>
-    <input type="radio" ng-model="type_of_state" value="">
+    <input type="radio" ng-model="type_of_state" value="" ng-change="logController.ChangeStateFilter(type_of_state)">
     All
   </label>
   <label>
-    <input type="radio" ng-model="type_of_state" value="active">
+    <input type="radio" ng-model="type_of_state" value="active" ng-change="logController.ChangeStateFilter(type_of_state)">
     Active
   </label>
   <label>
-    <input type="radio" ng-model="type_of_state" value="done">
+    <input type="radio" ng-model="type_of_state" value="done" ng-change="logController.ChangeStateFilter(type_of_state)">
     Done
   </label>
   
- <li ng-repeat="all_task in logController.all_task | filter : user : this.userFilter | filter : state : type_of_state" class="list-group" >
-   {{all_task.user}} {{all_task.description}} {{all_task.state }}
- <button class="btn btn-secondary" ng-click="logController.ChangeStatus(all_task)" >Change status</button>
- <button class="destroy" ng-click="logController.DestroyTask(all_task)">Destroy</button>
+ <li ng-repeat="task in logController.all_task | filter:logController.userFilter | filter:logController.stateFilter" class="list-group" >
+   {{task.user}} {{task.description}} {{task.state }}
+ 
+ <div ng-hide="logController.NotUserTask(task,logged_user)"> 
+ <button class="btn btn-secondary" ng-click="logController.ChangeStatus(task)" >Change status</button>
+ <button class="destroy" ng-click="logController.DestroyTask(task)">Destroy</button>
+ </div>
  </li>
