dodany panel logowania

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,10 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-            <h3 class="panel-heading">Login</h3>
-              <a ui-sref="log"></a>
+           <h3> 
+            <a ui-sref="home">Log</a>
+            <a ui-sref="log">ToDo</a>
+            </h3>
         </ul>
       </div>
     </nav>
