--- a/app/index.html
+++ b/app/index.html
@@ -6,16 +6,17 @@
 </head>
 
 <body ng-app="app">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <ul class="nav navbar-nav">
-           <h3> 
-            <a ui-sref="home">Log</a>
-            <a ui-sref="log">ToDo</a>
-            </h3>
-        </ul>
-      </div>
-    </nav>
+    <div ng-show="homeController.if_logged == defined">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <ul class="nav navbar-nav">
+               <h3> 
+                <a ui-sref="home">Logout</a>
+                </h3>
+            </ul>
+          </div>
+        </nav>
+    </div>
         <div class="container">
         <ui-view></ui-view>
     </div>
