podzial na panele: logowanie,lista todo, statystyki

--- a/app/logowanie/log.html
+++ b/app/logowanie/log.html
@@ -1,3 +1,14 @@
+  <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <ul class="nav navbar-nav">
+               <h3> 
+                <a ui-sref="home">Logout</a>
+                <a ui-sref="stat">Statistic</a>
+                </h3>
+            </ul>
+          </div>
+        </nav>
+  
     <div class="row">
     <div class="col-lg-6">
         <div class="input-group">
@@ -41,9 +52,5 @@
  </div>
  </li>
  
- <button class="destroy" ng-click="logController.Statats()">Statistics</button> <br/>
-my_done: {{ logController.my_done }} <br/>
-my_active: {{ logController.my_active }} <br/>
-global_done: {{ logController.global_done }} <br/>
-global_active: {{ logController.global_active }} <br/>
+
  
