--- a/app/home/home.html
+++ b/app/home/home.html
@@ -1,4 +1,4 @@
-<body data-ng-controller="homeController">
+<body ng-app="app" data-ng-controller="homeController">
 
 <div ng-switch="homeController.if_logged">
 	<div ng-switch-when='undefined'>	
@@ -15,10 +15,21 @@
 	</div>
 
 	<div ng-switch-when='defined'>
-		        <a ui-sref="log">ToDo</a>
-		        <div class="container">
-		        <ui-view></ui-view>
-		   		 </div>
+		  <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <ul class="nav navbar-nav">
+               <h3> 
+		        <a ui-sref="log">Todo</a>
+		        <a ui-sref="stat">Statistic</a>
+                </h3>
+            </ul>
+          </div>
+        </nav>
+ 
+	 <div class="container">
+		<ui-view></ui-view>
+	 </div>
+	 
 	</div>
 </div>
 		
