--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,8 +2,16 @@
 
 <div ng-switch="homeController.if_logged">
 	<div ng-switch-when='undefined'>	
+	
+			  <nav class="navbar navbar-inverse">
+			  <div class="container-fluid">
+			    <ul class="nav navbar-nav">
+			    <a class="navbar-brand" href="#">Login form</a>	
+			    </ul> 
+			  </div>
+			</nav> 
+			
 		<div class="panel">
-				<h3 class="panel-heading">Login form</h3>
 				<form name="homeForm" class="panel-body" data-ng-hide="correctEmail" data-ng-submit="homeController.add_user(logged_user)">
 						<fieldset class="well">
 							<div <div class="form-group">
@@ -15,17 +23,17 @@
 	</div>
 
 	<div ng-switch-when='defined'>
-		  <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <ul class="nav navbar-nav">
-               <h3> 
-		        <a ui-sref="log">Todo</a>
-		        <a ui-sref="stat">Statistic</a>
-                </h3>
-            </ul>
-          </div>
-        </nav>
- 
+		  <nav class="navbar navbar-inverse">
+			  <div class="container-fluid">
+			    <ul class="nav navbar-nav">
+			      <li><a ui-sref="log">Todo</a></li>
+			      <li><a ui-sref="stat">Statistic</a></li>
+			    </ul>
+			    <ul class="nav navbar-nav navbar-right">
+			      <li><a ui-sref="home"><span class="glyphicon glyphicon-log-in"></span>  Logout</a></li>
+			    </ul>
+			  </div>
+			</nav> 
 	 <div class="container">
 		<ui-view></ui-view>
 	 </div>
