--- a/app/logowanie/log.html
+++ b/app/logowanie/log.html
@@ -1,13 +1,15 @@
-  <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <ul class="nav navbar-nav">
-               <h3> 
-                <a ui-sref="home">Logout</a>
-                <a ui-sref="stat">Statistic</a>
-                </h3>
-            </ul>
-          </div>
-        </nav>
+
+		  <nav class="navbar navbar-inverse">
+			  <div class="container-fluid">
+			    <ul class="nav navbar-nav">
+			      <li><a ui-sref="log">Todo</a></li>
+			      <li><a ui-sref="stat">Statistic</a></li>
+			    </ul>
+			    <ul class="nav navbar-nav navbar-right">
+			      <li><a ui-sref="home"><span class="glyphicon glyphicon-log-in"></span>  Logout</a></li>
+			    </ul>
+			  </div>
+			</nav> 
   
     <div class="row">
     <div class="col-lg-6">
@@ -28,12 +30,35 @@
       <lable>
         <input type="radio" ng-model="user_type" value='all' ng-change="logController.ChangeUserFilter(user_type)" >
         All list
-      </lable> <br/>
+      </lable> <br/> <br/>
     
-        <label>
+
+<table class="table table-striped">
+    <thead>
+      <tr></tr>
+        <th>Description</th>
+        <th>Status</th>
+        <th>User</th>        
+        <th>Action(owner)</th>
+      </tr>
+    </thead>
+    <tbody ng-repeat="task in logController.all_task | filter:logController.userFilter | filter:logController.stateFilter">
+    <tr>
+        
+        <td>{{task.description}}</td>
+        <td>{{task.state}}</td>
+        <td>{{task.user}}</td>
+        <td>  
+          <button ng-hide="logController.NotUserTask(task)" class="destroy" ng-click="logController.ChangeStatus(task)" >Change status</button> 
+          <button ng-hide="logController.NotUserTask(task)" class="destroy" ng-click="logController.DestroyTask(task)">Destroy</button>
+        </td> 
+    </tr>
+    </tbody>
+  </table>
+         <label>
           <input type="radio" ng-model="type_of_state" value="" ng-change="logController.ChangeStateFilter(type_of_state)">
           All
-        </label>
+         </label>
         <label>
           <input type="radio" ng-model="type_of_state" value="active" ng-change="logController.ChangeStateFilter(type_of_state)">
           Active
@@ -42,15 +67,6 @@
           <input type="radio" ng-model="type_of_state" value="done" ng-change="logController.ChangeStateFilter(type_of_state)">
           Done
         </label>
-  
- <li ng-repeat="task in logController.all_task | filter:logController.userFilter | filter:logController.stateFilter" class="list-group" >
-   {{task.user}} {{task.description}} {{task.state }}
- 
- <div ng-hide="logController.NotUserTask(task)"> 
- <button class="btn btn-secondary" ng-click="logController.ChangeStatus(task)" >Change status</button>
- <button class="destroy" ng-click="logController.DestroyTask(task)">Destroy</button>
- </div>
- </li>
  
 
  
