--- a/app/statistic/stat.html
+++ b/app/statistic/stat.html
@@ -1,15 +1,16 @@
 <body ng-app="app" data-ng-controller="statController">
       
-  <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <ul class="nav navbar-nav">
-               <h3> 
-                <a ui-sref="home">Logout</a>
-                <a ui-sref="log">ToDo</a>
-                </h3>
-            </ul>
-          </div>
-        </nav>
+		  <nav class="navbar navbar-inverse">
+			  <div class="container-fluid">
+			    <ul class="nav navbar-nav">
+			      <li><a ui-sref="log">Todo</a></li>
+			      <li><a ui-sref="stat">Statistic</a></li>
+			    </ul>
+			    <ul class="nav navbar-nav navbar-right">
+			      <li><a ui-sref="home"><span class="glyphicon glyphicon-log-in"></span>  Logout</a></li>
+			    </ul>
+			  </div>
+			</nav>   
 
 {{ statController.Statats() }}   
 my_done: {{ statController.my_done }} ( {{statController.my_done_proc| number : 2}} %) <br/>
