--- a/app/home/home.html
+++ b/app/home/home.html
@@ -26,10 +26,11 @@
 		  <nav class="navbar navbar-inverse">
 			  <div class="container-fluid">
 			    <ul class="nav navbar-nav">
-			      <li><a ui-sref="log">Todo</a></li>
+			      <li><a ui-sref="log">To Do</a></li>
 			      <li><a ui-sref="stat">Statistic</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
+			      <li><a>{{homeController.user}}</a></li>
 			      <li><a ui-sref="home"><span class="glyphicon glyphicon-log-in"></span>  Logout</a></li>
 			    </ul>
 			  </div>
