--- a/app/logowanie/log.html
+++ b/app/logowanie/log.html
@@ -1,11 +1,11 @@
-
 		  <nav class="navbar navbar-inverse">
 			  <div class="container-fluid">
 			    <ul class="nav navbar-nav">
-			      <li><a ui-sref="log">Todo</a></li>
+			      <li><a ui-sref="log">To Do</a></li>
 			      <li><a ui-sref="stat">Statistic</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
+			      <li><a>{{logController.selectedUser}}</a></li>
 			      <li><a ui-sref="home"><span class="glyphicon glyphicon-log-in"></span>  Logout</a></li>
 			    </ul>
 			  </div>
@@ -14,7 +14,7 @@
     <div class="row">
     <div class="col-lg-6">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Task to do" ng-model="task_description">
+          <input type="text" class="form-control" placeholder="Task to do ..." ng-model="task_description">
           <span class="input-group-btn">
             <button class="btn btn-secondary" type="button" ng-click="logController.addTask(task_description)">Add!</button>
           </span>
@@ -38,7 +38,7 @@
       <tr></tr>
         <th>Description</th>
         <th>Status</th>
-        <th>User</th>        
+        <th>Owner</th>        
         <th>Action(owner)</th>
       </tr>
     </thead>
@@ -67,6 +67,4 @@
           <input type="radio" ng-model="type_of_state" value="done" ng-change="logController.ChangeStateFilter(type_of_state)">
           Done
         </label>
- 
-
  
