--- a/app/home/home.html
+++ b/app/home/home.html
@@ -26,7 +26,7 @@
 		  <nav class="navbar navbar-inverse">
 			  <div class="container-fluid">
 			    <ul class="nav navbar-nav">
-			      <li><a ui-sref="log">To Do</a></li>
+			      <li><a ui-sref="todo">To Do</a></li>
 			      <li><a ui-sref="stat">Statistic</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
